fix: Overflow issues in notes list item

--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -143,7 +143,8 @@ notes-view {
     }
 
     .meta {
-      width: 100%;
+      flex-grow: 1;
+      min-width: 0;
       padding: 0.9rem;
       padding-left: 0;
       border-bottom: 1px solid var(--sn-stylekit-border-color);
@@ -196,13 +197,12 @@ notes-view {
 
     .note-preview {
       font-size: var(--sn-stylekit-font-size-h3);
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       & > * {
         margin-top: 0.15rem;
       }
-
-      overflow: hidden;
-      text-overflow: ellipsis;
 
       .default-preview,
       .plain-preview {
